[package]
name = "indexer-events"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.51"
avro-rs = "0.13.0"
base64 = "0.11"
bigdecimal = { version = "0.2", features = ["serde"] }
borsh = "0.9.3"
cached = "0.23.0"
clap = { version = "3.0.0-beta.5", features = ["color", "derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
hex = "0.4"
itertools = "0.9.0"
num-traits = "0.2.11"
primitive-types = { version = "0.10.0", default-features = false, features = ["rlp"] }
regex = "1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "json"] }
syn = "1.0.90"
tempfile = "3.3.0"
tokio = { version = "1.8", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.35"
tracing-subscriber = "0.2.4"
prometheus = "0.13.1"
quote = "1.0.17"
lazy_static = "1.4.0"
aws-types= "0.13.0"
aws-sdk-s3="0.13.0"
actix-web = "=4.0.1"

near-jsonrpc-primitives = "0.14.0"
near-jsonrpc-client = "0.4.0-beta.0"
near-lake-framework = "0.5.0"
near-primitives = "0.14.0"
